# rdfmt-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  renovate.json  rust-toolchain
.github/workflows/: actionlint.yml  release.yml  rust.yml  validate-renovate.yml
json_schema/: Diagnostic.jsonschema
src/: lib.rs  schema.rs
tests/: gen_json.rs
