[package]
name = "rdfmt"
version = "0.1.0"
edition = "2021"

repository = "https://github.com/sksat/rdfmt-rs"
authors = ["sksat <sksat@sksat.net>"]
readme = "README.md"
description = "Reviewdog Diagnostic Format Rust Library"
license = "MIT"

[features]
default = []
build-with-local-schema = [] # empty feature for build with local jsonschema files(for docs.rs)

[package.metadata.docs.rs]
features = ["build-with-local-schema"]

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
schemafy = "0.6.0"
serde_variant = "0.1.1"

[build-dependencies]
reqwest = { version = "0.11.8", features = ["blocking"] }

[dev-dependencies]
prettydiff = "0.5.1"
