[package]
name = "rdfmt"
version = "0.2.1"
edition = "2021"

repository = "https://github.com/sksat/rdfmt-rs"
authors = ["sksat <sksat@sksat.net>"]
readme = "README.md"
description = "Reviewdog Diagnostic Format Rust Library"
license = "MIT"

[package.metadata.docs.rs]
features = ["build-with-local-schema"]

[features]
default = []
build-with-local-schema = [] # empty feature for build with local jsonschema files(for docs.rs)

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
schemafy = "0.6.0"
serde_variant = "0.1.2"

[build-dependencies]
reqwest = { version = "0.11.14", default-features = false, features = ["blocking", "rustls-tls"] }

[dev-dependencies]
prettydiff = "0.6.2"
